--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
-    <string name="app_name">News Application</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="app_name">News</string>
+    <string name="app_main">News Application</string>
+    <string name="toolbar_news">News</string>
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
